// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-xqGHE dvGTAE"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-hAkAFK tOKrG"
      tabindex="0"
    >
      <span
        class="sc-kZfRWb hsrEFl"
      >
        <i
          aria-hidden="true"
          class="sc-eHoOIp kiAykg"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eHoOIp kiAykg"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-uMZhz cnumgs sc-ljIcGq ggLeoM"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-bitxrY cZQmJP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-eHoOIp kiAykg"
    >
      : 
    </i>
    <span
      class="sc-jlJOIR buOnXy"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-xqGHE dvGTAE"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-hAkAFK tOKrG"
      tabindex="0"
    >
      <span
        class="sc-kZfRWb hsrEFl"
      >
        <i
          aria-hidden="true"
          class="sc-eHoOIp kiAykg"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eHoOIp kiAykg"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-uMZhz cnumgs sc-ljIcGq ggLeoM"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-bitxrY cZQmJP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-eHoOIp kiAykg"
    >
      : 
    </i>
    <span
      class="sc-jlJOIR buOnXy"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-xqGHE dvGTAE"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-hAkAFK tOKrG"
      tabindex="0"
    >
      <span
        class="sc-kZfRWb hsrEFl"
      >
        <i
          aria-hidden="true"
          class="sc-eHoOIp kiAykg"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eHoOIp kiAykg"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-uMZhz cnumgs sc-ljIcGq ggLeoM"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-bitxrY cZQmJP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-eHoOIp kiAykg"
    >
      : 
    </i>
    <span
      class="sc-jlJOIR buOnXy"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-uMZhz cnumgs sc-dTCDEk dNknVV"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-bitxrY cZQmJP"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-xqGHE dvGTAE"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-hAkAFK tOKrG"
      tabindex="0"
    >
      <span
        class="sc-kZfRWb hsrEFl"
      >
        <i
          aria-hidden="true"
          class="sc-eHoOIp kiAykg"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eHoOIp kiAykg"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-uMZhz cnumgs sc-ljIcGq ggLeoM"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-bitxrY cZQmJP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-eHoOIp kiAykg"
    >
      : 
    </i>
    <span
      class="sc-jlJOIR buOnXy"
    >
      hey
       
      <span
        class="sc-uMZhz cnumgs sc-dTCDEk dNknVV"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-bitxrY cZQmJP"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-uMZhz cnumgs sc-dTCDEk dNknVV"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-bitxrY cZQmJP"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-xqGHE dvGTAE"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-hAkAFK tOKrG"
      tabindex="0"
    >
      <span
        class="sc-kZfRWb hsrEFl"
      >
        <i
          aria-hidden="true"
          class="sc-eHoOIp kiAykg"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eHoOIp kiAykg"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-uMZhz cnumgs sc-ljIcGq ggLeoM"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-bitxrY cZQmJP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-eHoOIp kiAykg"
    >
      : 
    </i>
    <span
      class="sc-jlJOIR buOnXy"
    >
      hey
       
      <span
        class="sc-uMZhz cnumgs sc-dTCDEk dNknVV"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-bitxrY cZQmJP"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-xqGHE dvGTAE"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-hAkAFK tOKrG"
      tabindex="0"
    >
      <span
        class="sc-kZfRWb hsrEFl"
      >
        <i
          aria-hidden="true"
          class="sc-eHoOIp kiAykg"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eHoOIp kiAykg"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-uMZhz cnumgs sc-ljIcGq ggLeoM"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-bitxrY cZQmJP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-eHoOIp kiAykg"
    >
      : 
    </i>
    <span
      class="sc-jlJOIR buOnXy"
    >
      <span
        class="sc-uMZhz cnumgs sc-dTCDEk dNknVV"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-bitxrY cZQmJP"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-xqGHE dvGTAE"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-hAkAFK tOKrG"
      tabindex="0"
    >
      <span
        class="sc-kZfRWb hsrEFl"
      >
        <i
          aria-hidden="true"
          class="sc-eHoOIp kiAykg"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eHoOIp kiAykg"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-uMZhz cnumgs sc-ljIcGq ggLeoM"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-bitxrY cZQmJP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-eHoOIp kiAykg"
    >
      : 
    </i>
    <span
      class="sc-jlJOIR buOnXy"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-uMZhz cnumgs sc-dTCDEk dNknVV"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-bitxrY cZQmJP"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-xqGHE jsRUkD"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-hAkAFK tOKrG"
      tabindex="0"
    >
      <span
        class="sc-kZfRWb hsrEFl"
      >
        <i
          aria-hidden="true"
          class="sc-eHoOIp kiAykg"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-eHoOIp kiAykg"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-uMZhz cnumgs sc-ljIcGq ggLeoM"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-bitxrY cZQmJP"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-eHoOIp kiAykg"
    >
      : 
    </i>
    <span
      class="sc-jlJOIR buOnXy"
    >
      Hey
       
      <span
        class="sc-uMZhz cnumgs sc-dTCDEk dNknVV"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-bitxrY cZQmJP"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;
